Logic of create requests mediun
