# domain/usecase/src/main/java/co/com/crediyarequest/usecase/aplication/ApplicationUseCase.java
@@ -3,7 +3,10 @@ package co.com.crediyarequest.usecase.aplication;
 
 import co.com.crediyarequest.model.application.Application;
 import co.com.crediyarequest.model.application.gateways.ApplicationRepository;
+import co.com.crediyarequest.model.loantype.LoanType;
 import co.com.crediyarequest.model.loantype.gateways.LoanTypeRepository;
+import co.com.crediyarequest.model.state.State;
+import co.com.crediyarequest.model.state.gateways.StateRepository;
 import exceptions.BusinessException;
 import lombok.RequiredArgsConstructor;
 import reactor.core.publisher.Mono;
@@ -12,20 +15,35 @@ import reactor.core.publisher.Mono;
 public class ApplicationUseCase implements IApplicationUseCase {
     private final ApplicationRepository applicationRepository;
     private final LoanTypeRepository loanTypeRepository;
+    private final StateRepository stateRepository;
+
 
     @Override
     public Mono<Application> saveApplication(Application application) {
-        return loanTypeRepository.existsByidlongType(application.getIdloanType())
-                .flatMap(exists -> {
-                    if (exists) {
-                        application.setIdState(1L);
-                        return applicationRepository.saveApplication(application);
-                    } else {
-                        return Mono.error(new BusinessException("El tipo de préstamo con ID " + application.getIdloanType() + " no existe"));
-                    }
-                })
-                .onErrorResume(error -> {
-                    return Mono.error(error);
+        return Mono.zip(
+                        determineLoanType(application.getAmount()),
+                        findPendingReviewState()
+                )
+                .flatMap(tuple -> {
+                    Long loanTypeId = tuple.getT1();
+                    Long stateId = tuple.getT2();
+
+                    application.setLoantypeId(loanTypeId);
+                    application.setStateId(stateId);
+
+                    return applicationRepository.saveApplication(application);
                 });
+    }
+
+    private Mono<Long> determineLoanType(double amount) {
+        return loanTypeRepository.findByAmountRange(amount)
+                .map(LoanType::getIdloanType)
+                .switchIfEmpty(Mono.error(new BusinessException("No se encontró un tipo de préstamo válido para el monto: " + amount)));
+    }
+
+    private Mono<Long> findPendingReviewState() {
+        return stateRepository.findByName("Pendiente de revisión")
+                .map(State::getIdState)
+                .switchIfEmpty(Mono.error(new BusinessException("No se encontró el estado 'Pendiente de revisión'")));
     }
 }
