# infrastructure/entry-points/reactive-web/src/main/java/co/com/crediyarequest/api/requestdto/application/ApplicationCreateRequestDto.java
@@ -1,20 +1,16 @@
-package co.com.crediyarequest.api.requestdto;
+package co.com.crediyarequest.api.requestdto.application;
 
 import jakarta.validation.constraints.Digits;
 import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.Pattern;
+import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
 
-public record ApplicationRequestDto(
-
-        @NotBlank(message = "Loan Type is required")
-        Long idloanType,
-
-        @NotBlank(message = "Amount is required")
+public record ApplicationCreateRequestDto(
+        @NotNull(message = "Amount is required")
         @Digits(integer = 9, fraction = 2, message = "Amount must be a number with up to 9 digits before decimal and exactly 2 decimal places")
         double amount,
 
-        @NotBlank(message = "Term is required in moths")
+        @NotNull(message = "Term is required in moths")
         int term,
 
         @NotBlank(message = "Document is required")
