# infrastructure/entry-points/reactive-web/src/main/java/co/com/crediyarequest/api/responsedto/ApplicationResponseDto.java
@@ -1,12 +1,0 @@
-package co.com.crediyarequest.api.responsedto;
-
-public record ApplicationResponseDto(
-         Long idRequest,
-         Long idState,
-         Long longTypeId,
-         double amount,
-         int term,
-         String document
-) {
-
-}
